[#3148] Remove Proton-J dependency from RequestResponseResult hierarchy
The RequestResponseResult supports creating instances from a Proton-J
Message's application properties. The dependency on the
ApplicationProperties class has been removed. Instead, the constructors
now accept a Map containing the properties.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>